NCL-9421 - Extend operation with reason and proposal for exception information
